summary edit function

--- a/public/summary.html
+++ b/public/summary.html
@@ -671,58 +671,81 @@
                 }
             }
 
-            // プロジェクトごとの合計稼働時間を集計
-            const projectTotalHours = {}; // { 'P-001': 10.5, 'P-002': 5.2, ... }
+            // 月の日付ラベルを生成 (例: 1日, 2日, ...)
+            const selectedMonth = summaryMonthInput.value;
+            const year = parseInt(selectedMonth.substring(0, 4));
+            const month = parseInt(selectedMonth.substring(5, 7)) - 1; // 月は0から始まる
+
+            const daysInMonth = new Date(year, month + 1, 0).getDate();
+            const labels = Array.from({ length: daysInMonth }, (_, i) => `${i + 1}日`);
+
+            // プロジェクトごとの日次稼働時間を集計
+            const projectDailyHours = {}; // { 'P-001': { '2025/7/1': 8, '2025/7/2': 4 }, ... }
 
             timestamps.forEach(ts => {
+                const date = ts.clockInTime.toDate().toLocaleDateString('ja-JP', { year: 'numeric', month: 'numeric', day: 'numeric' });
                 const projectCode = ts.projectCode || '未選択';
                 const duration = ts.durationHours || 0;
 
-                projectTotalHours[projectCode] = (projectTotalHours[projectCode] || 0) + duration;
+                if (!projectDailyHours[projectCode]) {
+                    projectDailyHours[projectCode] = {};
+                }
+                projectDailyHours[projectCode][date] = (projectDailyHours[projectCode][date] || 0) + duration;
             });
 
-            // プロジェクトコードをソートしてラベルとデータセットの順序を決定
-            const sortedProjectCodes = Object.keys(projectTotalHours).sort();
-            const labels = sortedProjectCodes.map(code => userProjects.get(code)?.name || code); // プロジェクト名をラベルに
-
             // Chart.jsのデータセットを準備
-            const data = sortedProjectCodes.map(code => projectTotalHours[code]);
+            const datasets = Object.keys(projectDailyHours).map((projectCode, index) => {
+                const data = labels.map(label => {
+                    const fullDate = `${year}/${month + 1}/${parseInt(label.replace('日', ''))}`;
+                    return projectDailyHours[projectCode][fullDate] || 0;
+                });
+                const projectName = userProjects.get(projectCode)?.name || projectCode;
+                
+                // 色を動的に生成またはプロジェクトから取得
+                let borderColor;
+                let backgroundColor;
 
-            // 色を動的に生成またはプロジェクトから取得
-            const backgroundColors = sortedProjectCodes.map((projectCode, index) => {
                 const project = userProjects.get(projectCode);
                 if (project && project.color) {
                     // プロジェクトに色が指定されていればそれを使用
-                    return project.color;
+                    // Hex to RGBA conversion (assuming #RRGGBB format)
+                    const hex = project.color.startsWith('#') ? project.color.slice(1) : project.color;
+                    const r = parseInt(hex.substring(0, 2), 16);
+                    const g = parseInt(hex.substring(2, 4), 16);
+                    const b = parseInt(hex.substring(4, 6), 16);
+
+                    borderColor = `rgb(${r}, ${g}, ${b})`;
+                    backgroundColor = `rgba(${r}, ${g}, ${b}, 0.2)`; // 20% transparent for fill
                 } else {
-                    // デフォルトの色のリスト (透明度を下げて棒グラフに適した色に)
+                    // デフォルトの色のリスト
                     const defaultColors = [
-                        'rgba(75, 192, 192, 0.6)', // Teal
-                        'rgba(153, 102, 255, 0.6)', // Purple
-                        'rgba(255, 159, 64, 0.6)',  // Orange
-                        'rgba(255, 99, 132, 0.6)',  // Red
-                        'rgba(54, 162, 235, 0.6)',  // Blue
-                        'rgba(255, 206, 86, 0.6)',  // Yellow
-                        'rgba(201, 203, 207, 0.6)'  // Gray
+                        'rgba(75, 192, 192, 0.8)', // Teal
+                        'rgba(153, 102, 255, 0.8)', // Purple
+                        'rgba(255, 159, 64, 0.8)',  // Orange
+                        'rgba(255, 99, 132, 0.8)',  // Red
+                        'rgba(54, 162, 235, 0.8)',  // Blue
+                        'rgba(255, 206, 86, 0.8)',  // Yellow
+                        'rgba(201, 203, 207, 0.8)'  // Gray
                     ];
-                    return defaultColors[index % defaultColors.length];
+                    borderColor = defaultColors[index % defaultColors.length].replace('0.8', '1'); // Border is opaque
+                    backgroundColor = defaultColors[index % defaultColors.length].replace('0.8', '0.2'); // Fill is 20% transparent
                 }
+
+                return {
+                    label: projectName,
+                    data: data,
+                    borderColor: borderColor,
+                    backgroundColor: backgroundColor,
+                    borderWidth: 1,
+                    fill: true, // 線の下を塗りつぶす
+                    tension: 0.1 // スムーズな曲線
+                };
             });
-
-            const borderColors = backgroundColors.map(color => color.replace('0.6', '1')); // 枠線は不透明に
-
-            const datasets = [{
-                label: '稼働時間 (h)',
-                data: data,
-                backgroundColor: backgroundColors,
-                borderColor: borderColors,
-                borderWidth: 1
-            }];
 
             // Chart.jsのグラフを描画
             const ctx = timeChartCanvas.getContext('2d');
             chartInstance = new Chart(ctx, {
-                type: 'bar', // 棒グラフに変更
+                type: 'line', // 折れ線グラフに変更
                 data: {
                     labels: labels,
                     datasets: datasets
@@ -732,7 +755,7 @@
                     maintainAspectRatio: false, // コンテナのサイズに合わせる
                     plugins: {
                         legend: {
-                            display: false, // 棒グラフなので凡例は不要
+                            position: 'top',
                         },
                         title: {
                             display: false, // タイトルはHTMLで表示
@@ -742,7 +765,7 @@
                         x: {
                             title: {
                                 display: true,
-                                text: 'プロジェクト'
+                                text: '日付' // X軸は日付
                             }
                         },
                         y: {
